--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
+    "tailwindcss": "^1.8.10",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
