--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.10.3",
     "@rails/webpacker": "^5.2.1",
+    "@tailwindcss/ui": "^0.6.2",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "coffee-loader": "^1.0.0",
