--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.7.1-stretch-node
+      - image: circleci/ruby:2.7-node
         environment:
         - PG_HOST=localhost
         - PG_USER=ubuntu
