--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rails-ujs": "^5.2.3",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^10.0.1",
+    "stimulus": "^1.1.1",
     "style-loader": "^1.2.1",
     "tailwindcss": "^1.8.10",
     "webpack-dev-server": "^3.11.0"
