--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "stimulus": "^1.1.1",
     "style-loader": "^1.2.1",
     "tailwindcss": "^1.8.10",
+    "tailwindcss-stimulus-components": "^2.0.9",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
