--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^10.0.1",
     "stimulus": "^1.1.1",
+    "stimulus_reflex": "3.3.0",
     "style-loader": "^1.2.1",
     "tailwindcss": "^1.8.10",
     "tailwindcss-stimulus-components": "^2.0.9",
