--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.10.3",
+    "@rails/ujs": "^6.1.0",
     "@rails/webpacker": "^5.2.1",
     "@tailwindcss/ui": "^0.6.2",
     "autoprefixer": "^9.8.6",
@@ -23,7 +24,6 @@
     "postcss-loader": "^3.0.0",
     "postcss-smart-import": "^0.7.6",
     "precss": "^4.0.0",
-    "rails-ujs": "^5.2.3",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^10.0.1",
     "stimulus": "^1.1.1",
