--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,8 @@
-require: 'rubocop-performance'
+inherit_from: .rubocop_todo.yml
+
+require:
+  - 'rubocop-performance'
+  - 'rubocop-rails'
 
 AllCops:
   DisplayCopNames: true
