--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 
+# Ignore database backups
+/db/*.dump
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
