Add node 18 compatible webpack

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "style-loader": "^1.2.1",
     "tailwindcss": "^1.8.10",
     "tailwindcss-stimulus-components": "^2.0.9",
+    "webpack": "4.47.0",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
