--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tailwindcss": "^1.8.10",
     "tailwindcss-stimulus-components": "^2.0.9",
     "webpack": "4.47.0",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
