--- a/package.json
+++ b/package.json
@@ -9,27 +9,18 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.10.3",
     "@rails/ujs": "^6.1.0",
-    "@rails/webpacker": "^5.2.1",
     "@tailwindcss/ui": "^0.6.2",
     "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^4.2.2",
-    "file-loader": "^6.1.0",
     "glob": "^7.1.4",
     "js-yaml": "^3.14.0",
-    "mini-css-extract-plugin": "^0.11.0",
     "path-complete-extname": "^1.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-smart-import": "^0.7.6",
     "precss": "^4.0.0",
     "resolve-url-loader": "^3.1.0",
     "stimulus": "^1.1.1",
-    "style-loader": "^1.2.1",
     "tailwindcss": "^1.8.10",
-    "tailwindcss-stimulus-components": "^2.0.9",
-    "webpack": "4.47.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.15.1"
+    "tailwindcss-stimulus-components": "^2.0.9"
   },
   "devDependencies": {
     "prettier": "2.1.1"
