--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.10.3",
+    "@hotwired/stimulus": "^3.2.2",
     "@rails/ujs": "^6.1.0",
     "@tailwindcss/ui": "^0.6.2",
     "autoprefixer": "^9.8.6",
