--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,11 @@
 inherit_from: .rubocop_todo.yml
 
+plugins:
+  - rubocop-rails
+  - rubocop-rspec
+
 require:
   - 'rubocop-performance'
-  - 'rubocop-rails'
-  - 'rubocop-rspec'
 
 AllCops:
   DisplayCopNames: true
