--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@rails/ujs": "^6.1.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/ui": "^0.6.2",
     "esbuild": "^0.25.0",
     "glob": "^7.1.4",
     "js-yaml": "^3.14.0",
     "path-complete-extname": "^1.0.0",
     "stimulus": "^1.1.1",
-    "tailwindcss": "^1.8.10",
+    "tailwindcss": "^3.8.10",
     "tailwindcss-stimulus-components": "^2.0.9"
   },
   "devDependencies": {
